package org.poo.model.pessoa;

public enum Cargo {
    GERENTE,
    SUPERVISOR,
    ATENDENTE
}
