package org.poo.model.veiculo;

public enum StatusVeiculo {
    DISPONIVEL,
    LOCADO,
    EM_MANUTENCAO,
    DESATIVADO
}
